--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^12.1.1",
+    "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
     "standard-version": "^9.3.1",
     "typescript": "~4.3.5"
