--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,9 @@
             "styles": [
               "projects/demo-app/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/quill/dist/quill.js"
+            ]
           },
           "configurations": {
             "production": {
