--- a/projects/primeng-shadowdom-directives/package.json
+++ b/projects/primeng-shadowdom-directives/package.json
@@ -1,14 +1,4 @@
 {
   "name": "primeng-shadowdom-directives",
-  "version": "0.1.3",
-  "peerDependencies": {
-    "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/cdk": "^12.2.6",
-    "@angular/forms": "~12.2.0",
-    "primeng": "^12.1.1"
-  },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  }
+  "version": "0.1.3"
 }
