--- a/projects/primeng-shadowdom-directives/package.json
+++ b/projects/primeng-shadowdom-directives/package.json
@@ -1,4 +1,7 @@
 {
   "name": "primeng-shadowdom-directives",
-  "version": "0.1.4"
+  "version": "0.1.4",
+  "dependencies": {
+    "tslib": "^2.3.0"
+  }
 }
