feat: support angular 16

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    // "strict": true,
+    "strict": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -16,14 +18,14 @@
     "importHelpers": true,
     "paths": {
       "primeng-shadowdom-directives": [
-        "dist/primeng-shadowdom-directives/primeng-shadowdom-directives",
         "dist/primeng-shadowdom-directives"
       ]
     },
-    "target": "es2017",
-    "module": "es2020",
+    "target": "ES2022",
+    "module": "ES2022",
+    "useDefineForClassFields": false,
     "lib": [
-      "es2018",
+      "ES2022",
       "dom"
     ]
   },
