--- a/projects/primeng-shadowdom-directives/package.json
+++ b/projects/primeng-shadowdom-directives/package.json
@@ -1,7 +1,37 @@
 {
   "name": "primeng-shadowdom-directives",
-  "version": "0.2.2",
+  "title": "Primeng Shadowdom Directives",
+  "description": "Directives that make PrimeNG plays nicely with ShadowDOM",
+  "version": "1.0.1",
+  "peerDependencies": {
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0"
+  },
   "dependencies": {
     "tslib": "^2.3.0"
-  }
+  },
+  "sideEffects": false,
+  "author": {
+    "email": "maitrungduc1410@gmail.com",
+    "name": "Mai Trung Duc",
+    "url": "https://github.com/maitrungduc1410"
+  },
+  "repository": {
+    "url": "https://github.com/maitrungduc1410/primeng-shadowdom-directives.git",
+    "type": "git"
+  },
+  "bugs": {
+    "email": "maitrungduc1410@gmail.com",
+    "url": "https://github.com/maitrungduc1410/primeng-shadowdom-directives/issues"
+  },
+  "homepage": "https://github.com/maitrungduc1410/primeng-shadowdom-directives",
+  "readme": "README.md",
+  "license": "MIT",
+  "licenseFilename": "LICENSE",
+  "keywords": [
+    "primeng",
+    "primeng shadowdom",
+    "primeng shadowdom directives",
+    "shadowdom directives"
+  ]
 }
